syntax = "proto3";

import "google/protobuf/any.proto";

message Trace {
  uint64 id = 1;
  string version = 2;
  string time = 3;
  string method = 4;
  string status_code = 5;
  double duration = 6;
  uint64 user_id = 7;
  google.protobuf.Any request = 8;
  google.protobuf.Any response = 9;
  string traceback = 10;
}
